--- a/book-store/public/add.html
+++ b/book-store/public/add.html
@@ -37,24 +37,55 @@
                 <input type="text" id="author" class="form-control" placeholder="Enter author's name">
             </div>
             <div class="form-group">
-                <label for="numPages">Number of Pages</label>
-                <input type="number" id="numPages" class="form-control" placeholder="Enter number of pages">
+                <label for="numPages">Price</label>
+                <input type="number" id="Price" class="form-control" placeholder="Enter price of the book">
             </div>
-            <div class="form-group">
-                <label for="dueDate">Due Date</label>
-                <input type="date" id="dueDate" class="form-control">
-            </div>
-            <div class="form-group form-check">
-                <input type="checkbox" class="form-check-input" id="isCheckedOut">
-                <label class="form-check-label" for="isCheckedOut">Checked Out</label>
-            </div>
+         
             <button type="submit" class="btn btn-primary">Add</button>
             </form>
             <div id="add-results"></div>
         </div>
         <script>
         /* function declarations */
+            function submitForm(event){
+                event.preventDefault();
+                const newBook = getFormData();
+                sendData(newBook);
+
+            }
+
+            function getFormData(){
+                return {
+                    title: form.title.value,
+                    author: form.author.value,
+                    price: form.price.value
+                };
+            }
+
+            function updateUI(data){
+                addResultsDiv.textContent = JSON.stringify(data);
+            }
+
+            function sendData(data){
+                fetch('/books', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify(data)
+                })
+                .then(response => response.json())
+                .then(data => {
+                    updateUI(data);
+                });
+
+            }
+
         /* setup and function calls */
+
+        const form = document.getElementById("add-form");
+        const addResultsDiv = document.getElementById("add-results");
+        form.reset();
         </script>
     </body>
 </html>
