finished javaScript practice

--- a/JavaScript-Practice/index.html
+++ b/JavaScript-Practice/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title>Library System</title>
-        <script src="book.js"></script>
-        <script src="library.js"></script>
+        <script src="Book.js"></script>
+        <script src="Library.js"></script>
         <script src="basic-tests.js"></script>
-        <script src="extensive-tests.js"></script>
+        <script src="extensive-test.js"></script>
     </head>
     <body>
         <h1>Open your browser console to see the output</h1>
