--- a/book-store/public/delete.html
+++ b/book-store/public/delete.html
@@ -39,6 +39,9 @@
         </div>
         <script>
         /* function declarations */
+        function deleteById(book){
+            
+        }
         /* setup and function calls */
         </script>
     </body>
