--- a/book-store/public/index.html
+++ b/book-store/public/index.html
@@ -15,6 +15,9 @@
                         <a class="nav-link" href="search.html">Search</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="book.html">Single Book</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="add.html">Add</a>
                     </li>
                     <li class="nav-item">
@@ -26,6 +29,7 @@
                 </ul>
             </div>
         </nav>
+    
         <div class="container">
             <h1>Book List</h1>
             <ul id="book-list"></ul>
