--- a/Fetch API HW/mealByIngredientElegant.html
+++ b/Fetch API HW/mealByIngredientElegant.html
@@ -38,7 +38,7 @@
 
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <form onsubmit="getMealsByIngredient();" class="form-inline mb-4 justify-content-center">
+                <form onsubmit="getMealsByIngredient(event);" class="form-inline mb-4 justify-content-center">
                     <label for="ingredientInput" class="mr-2">Ingredient:</label>
                     <input type="text" name="ingredientInput" id="ingredientInput" class="form-control mr-2" required>
                     <button type="submit" class="btn btn-primary">Get Meals</button>
@@ -54,7 +54,16 @@
     <script>
         /* function declarations */
 
+        function getMealsByIngredient(event){
+            event.preventDefault();
+            sendRequest(ingredientInput.value);
+        }
+
 				/* setup and function calls */
+        
+        const ingredientInput = document.getElementById("ingredientInput");
+        const mealList = document.getElementById("meal-list");
+        getData();
     </script>
 </body>
 </html>
