--- a/Fetch API HW/mealByIngredientBasic.html
+++ b/Fetch API HW/mealByIngredientBasic.html
@@ -38,7 +38,7 @@
 
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <form onsubmit="getMealsByIngredient();" class="form-inline mb-4 justify-content-center">
+                <form onsubmit="getMealsByIngredient(event);" class="form-inline mb-4 justify-content-center">
                     <label for="ingredientInput" class="mr-2">Ingredient:</label>
                     <input type="text" name="ingredientInput" id="ingredientInput" class="form-control mr-2" required>
                     <button type="submit" class="btn btn-primary">Get Meals</button>
@@ -53,8 +53,54 @@
 
     <script>
         /* function declarations */
+        function populateDropdown(meal){
+            let option = document.createElement('option');
+            option.value = meal.strMeal;
+            option.textContent = meal.strMeal;
+            mealList.append(option);
+        }
+
+        function updateUI(data){
+            mealList.innerHTML = "";
+
+            const meal = data.meals[0];
+
+            let strMeals = document.createElement('p');
+
+            strMeals.textContent = meal.strMeal;
+
+            mealList.append(strMeals);
+        }
+
+        function getData(){
+            for(let i = 0; i < 10; i++){
+                fetch(`https://www.themealdb.com/api/json/v1/1/filter.php`)
+                .then(response => response.json())
+                .then(data => {
+                    const meal = data.meals[i];
+                    populateDropdown(meal);
+                })
+            }
+        }
+
+        function sendRequest(ingredient){
+            fetch(`https://www.themealdb.com/api/json/v1/1/filter.php?i=${ingredient}`)
+            .then(response => response.json())
+            .then(data => {
+                updateUI(data);
+            })
+        }
+
+        function getMealsByIngredient(event){
+            event.preventDefault();
+            sendRequest(ingredientInput.value);
+        }
 
 				/* setup and function calls */
+
+        const ingredientInput = document.getElementById("ingredientInput");         
+        const mealList = document.getElementById("meal-list");
+        getData();
     </script>
 </body>
 </html>
