--- a/Fetch API HW/mealByAreaElegant.html
+++ b/Fetch API HW/mealByAreaElegant.html
@@ -55,7 +55,7 @@
 
     <script>
        /* function declarations */
-        function populateDropDown(meal){
+        function populateDropdown(meal){
             let option = document.createElement("option");
             option.value = meal.strArea;
             option.textContent = meal.strArea;
@@ -65,28 +65,33 @@
 
 
 
-        function updateUI(data){
-            mealList = innerHTML = "";
+        function updateUI(mealData){
 
-            const meal = data.meals[0];
+            let results = "";
+            console.log(mealData);
 
-            let strAreas = document.createElement('p');
-            let pic = document.createElement('img');
+            for(meal of mealData){
+                const newElem = `
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="${meal.strMealThumb}" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">${meal.strMeal}</h5>
+                    </div>
+                </div>
+                `;
+                mealList.innerHTML += newElem;
+            }
 
-            strAreas.textContent = meal.strArea;
-            pic.src = meal.strMealThumb;
-            console.log("HERE ON UPDATE UI");
-            mealList.append(strAreas);
-            mealList.append(pic);
+  
         }
 
         function getData(){
             for(let i = 0; i < 10; i++){
                 fetch("https://www.themealdb.com/api/json/v1/1/list.php?a=list")
-                .then(response => response)
+                .then(response => response.json())
                 .then(data => {
-                    const meal = data.meals[0];
-                    populateDropDown(meal);
+                    const meal = data.meals[i];
+                    populateDropdown(meal);
                 });
             }
         }
@@ -95,14 +100,14 @@
             fetch(`https://www.themealdb.com/api/json/v1/1/filter.php?a=${area}`)
             .then(response => response.json())
             .then(data => {
-                updateUI(data);
+                updateUI(data.meals);
             });
         }
 
 
         function getMealsByArea(event){
             event.preventDefault();
-            sendRequest(mealList.value);
+            sendRequest(areaSelect.value);
         }
 
 				/* setup and function calls */
