--- a/class-user-logins/public/login.html
+++ b/class-user-logins/public/login.html
@@ -8,6 +8,7 @@
     <nav class="bg-blue-500 p-4 flex justify-between text-white">
         <div class="flex space-x-4">
             <a href="index.html">Home</a>
+            <a href="update.html">Update</a>
             <a href="login.html">Login</a>
             <a href="register.html">Register</a>
         </div>
